@@ -241,6 +241,16 @@ fi
 
 AC_SUBST(EXAMPLE_SUBDIR)
 
+AC_ARG_ENABLE(demos, [AC_HELP_STRING([--enable-demos],
+                                        [build the included demos [default=yes]])],,
+                        [enable_demos=yes])
+if test "x$enable_demos" = "xyes"; then
+  DEMO_SUBDIR="demos"
+else
+  DEMO_SUBDIR=""
+fi
+
+AC_SUBST(DEMO_SUBDIR)
 
 # Dummy conditional just to make automake-1.4 happy.
 # We need an always-false condition in docs/Makefile.am.
