@@ -8,6 +8,10 @@
 #undef GTKMM_MINOR_VERSION
 #undef GTKMM_MICRO_VERSION
 
+#undef HAVE_FLOCKFILE
+#undef HAVE_FUNLOCKFILE
+#undef GETC_UNLOCKED
+
 //WIN32 DLL import/export stuff:
 #define GTKMM_API GLIBMM_API
 
