@@ -114,7 +114,7 @@ ColorSelection::set_change_palette_hook(const ColorSelection::SlotChangePaletteH
     try
     {
       if(old_func != &global_change_palette_hook_callback)
-        old_slot = sigc::bind(sigc::ptr_fun(&old_change_palette_hook_callback), old_func);
+        old_slot = sigc::bind<-1>(sigc::ptr_fun(&old_change_palette_hook_callback), old_func);
       else if(global_change_palette_hook)
         old_slot = *global_change_palette_hook;
     }
