@@ -692,6 +692,8 @@ int TreeView::append_column(const Glib::ustring& title, const TreeModelColumn<Co
   #define GTKMM_HAVE_SIGC_BIND 1
 #endif
 
+#ifdef GTKMM_HAVE_SIGC_BIND
+
 template <class ColumnType> inline
 int TreeView::append_column_numeric(const Glib::ustring& title, const TreeModelColumn<ColumnType>& model_column, const Glib::ustring& format)
 {
