@@ -1,5 +1,12 @@
 2005-01-25  Murray Cumming  <murrayc@murrayc.com>
 
+	* configure.in, Makefile.am: Add --disable-demos configure option, 
+	by plors in bug #160756. This is needed because AIX does not support 
+	sigc::bind at all and the demos would be quite unreadable if we 
+	worked around that. This way, at least gtkmm can be installed on AIX.
+
+2005-01-25  Murray Cumming  <murrayc@murrayc.com>
+
 	* examples/book/input/main.cc: Do not use O_NONBLOCK, because the 
 	example is meant to be blocking. As advised by Chris Vine.
 
